# Command-Center

./: .gitignore
daemon/: Cargo.toml
daemon/src/: handlers.rs  main.rs  models.rs  system.rs
frontend/: package-lock.json  package.json  tailwind.config.mjs
frontend/app/: page.tsx
frontend/components/: AppLauncher.tsx  MediaSystemControls.tsx  NotificationFeed.tsx  SmoothSlider.tsx  TelemetryBar.tsx  WorkspaceGrid.tsx
frontend/lib/: utils.ts
