[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
local-ip-address = "0.6.13"
qr2term = "0.3.3"
rand = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tower-http = { version = "0.7.0", features = ["cors"] }
